# ThinxAI-Canvas-MCP

./: .gitignore  CLAUDE.md  DEVELOPMENT_NOTES.md  README.md  canvas_bot.py  pyproject.toml  test_hierarchical.py  test_render.py
profiles/: canvas_bot.md
src/canvas_mcp/: __init__.py  models.py  organize.py  parser.py  renderer.py  server.py  themes.py
templates/: ai-pipeline.yaml  decision-tree.yaml  simple-flow.yaml
web/: index.html
