[project]
name = "canvas-mcp"
version = "0.1.0"
description = "MCP server for creating hierarchical canvas diagrams as PNGs"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "pydantic>=2.0",
]

[project.scripts]
canvas-mcp = "canvas_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/canvas_mcp"]
